separated custom style (style.css) from skeleton.css; fixed alignment bug in search bar; created footer including modular creative commons icons;

--- a/skeleton.css
+++ b/skeleton.css
@@ -418,83 +418,3 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
-/* Header
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.header{
-    position: relative;
-    top: 10;
-    padding: 9;
-    text-align: center;
-    font-weight: bold;   
-    color: #000000;
-}
-
-.logo{
-    display: block;
-    padding-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-}
-
-.main{
-    position: relative;
-    top: 40px;
-}
-
-#home:hover{
-   text-shadow: 2px 2px #E5E5E5;
-}
-
-#archive:hover{
-    text-shadow: 2px 2px #E5E5E5;
-}
-
-#capacitor:hover{
-    text-shadow: 2px 2px #E5E5E5;
-}
-
-#search{
-    position: relative;
-    text-align: center;
-    border: 1px solid rgba(0, 0, 0, .05);
-    color: #000000;
-    max-height: 25px;
-    max-width: 70%;
-    float: left;
-}
-
-#search-form{
-    float: left;
-}
-
-#search::-webkit-input-placeholder {
-   color: #000000;
-
-}
-
-#search:-moz-placeholder { /* Firefox 18- */
-   color: #000000;  
-   text-shadow: 
-}
-
-#search::-moz-placeholder {  /* Firefox 19+ */
-   color: #000000;  
-   background: rgba(225, 225, 225, .5);
-}
-
-#search:-ms-input-placeholder {  
-   color: #000000;
-   background: rgba(225, 225, 225, .5);
-}
-
-#submit{
-    background: url(images/mag_glass.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    max-height: 25px;
-    max-width: 25%;
-    border: none;
-    float: left;
-}
